<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
	<Button android:id="@+id/myMarketButton"
		android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:text="@string/myMarket"
	    />
	<Button android:id="@+id/myOutflowButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/myMarketButton"
	    android:text="@string/outflow"
	    />
	<Button android:id="@+id/myInflowButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/myOutflowButton"
	    android:text="@string/inflow"
	    />
	<Button android:id="@+id/myBackButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:text="@string/back"
	    />
</RelativeLayout>

    
        

