<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white"
    android:orientation="vertical" 
    android:gravity="center_horizontal">

    <com.example.LoginButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:src="@drawable/login_button" />

    <ImageView
        android:id="@+id/chartImage"
        android:contentDescription="BudgetPieChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/budgetpiechart" 
        android:maxWidth="200sp"
        android:visibility="invisible"
        android:maxHeight="200sp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        />

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@drawable/black" />

    <Button
        android:id="@+id/getBudgetGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/getBudgetGraph"
        android:visibility="invisible" />

    <Button
        android:id="@+id/getSplitBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/getSplitBill"
        android:visibility="invisible" />

    <Button
        android:id="@+id/getLoanBorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/getLoanBorrow"
        android:visibility="invisible" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/upload"
        android:visibility="invisible" />

    <Button
        android:id="@+id/requestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/request"
        android:visibility="invisible" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/post"
        android:visibility="invisible" />

    <Button
        android:id="@+id/deletePostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/delete"
        android:visibility="invisible" />

</LinearLayout>